Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96447

Subtitles do not work on iOS

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 6.3.0 Alpha, 6.2
    • 6.2.0 Beta4
    • Multimedia
    • None
    • iOS/tvOS/watchOS, macOS
    • 82c70bce11abea285a5e06a357da4c9434db0529 (qt/qtmultimedia/dev) 86ded826ab68c6d72aeef2993ac04aba264cde83 (qt/qtmultimedia/6.2)

    Description

      Subtitles do not render on iOS, even though they do work on macOS.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            laknoll Lars Knoll
            laknoll Lars Knoll
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes