Force subtitles to get laoded when selecting a subtitle track

AVFoundation by default tries to apply user specific selection citeria
when selecting audio and subtitle tracks. Unfortunately, this meant
subtitles would not get rendered at all if they were initially disabled.

This change ensures we enable them in the player when the user selects
a subtitle track. In addition, we make sure they are disabled by default
when you first load the media file.

Fixes: QTBUG-96447
Change-Id: Ibfeb96ef54728324395f7d4bac4d035b8ee1d212
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
Reviewed-by: André de la Rocha <andre.rocha@qt.io>
Reviewed-by: Doris Verria <doris.verria@qt.io>
(cherry picked from commit 82c70bce11abea285a5e06a357da4c9434db0529)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>